--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -14,7 +14,8 @@ $color-tertiary-dark:#5643fa;
 
 $color-gray-light-1: #f7f7f7;
 $color-gray-light-2: #eee;
-
+$color-gray-dark-1: #777;
+$color-gray-dark-2:  #999;
 // FONT
 $default-font-size: 1.6rem;
 
