--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -3,9 +3,9 @@
 }
 
 .hidden { display: none; }
-.mb-small { margin-bottom: 1.5rem; }
-.mb-4, .mb-medium { margin-bottom: 4rem; }
-.mb-8, .mb-large { margin-bottom: 8rem; }
+.mb-small { margin-bottom: 1.5rem !important; }
+.mb-4, .mb-medium { margin-bottom: 4rem !important; }
+.mb-8, .mb-large { margin-bottom: 8rem !important; }
 .mt-small { margin-top: 1.5rem; }
 .mt-medium { margin-top: 4rem; }
 .mt-large { margin-top: 8rem; }
