--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,5 +1,6 @@
 
 .btn {
+    &,
     &:link,
     &:visited {
         font-size: $default-font-size;
@@ -10,6 +11,10 @@
         border-radius: 10rem;
         transition: all .2s;
         position: relative;
+
+        // change for the <button> element
+        border: none;
+        cursor: pointer;
     }
 
     &:hover {
@@ -22,7 +27,9 @@
         }
     }
 
+    &:focus,
     &:active {
+        outline: none;
         transform: translateY(-1px);
         box-shadow: 0 .5rem 1rem rgba($color-black,.2);
     }
