--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -27,3 +27,34 @@
     padding: 25rem 0 15rem 0;
     margin-top: -10rem;
 }
+
+.section-stories {
+    position: relative;
+    padding: 15rem 0;
+}
+
+.section-book {
+    padding: 15rem 0;
+    background-image: linear-gradient(to right bottom, $color-primary-light, $color-primary-dark);
+}
+
+.book {
+    // other technique for clip (solid color radient)
+    background-image: linear-gradient(105deg, 
+                            rgba($color-white,.9) 0%, 
+                            rgba($color-white, .9) 50%,
+                            transparent 50%), 
+                            url(../img/nat-10.jpg);
+    background-size: 100%;
+    border-radius: 3px;
+    box-shadow: 0 1.5rem 4rem rgba($color-black, .4); // .4 because the background is already dark, so to be able to display... 
+    // other technique ..
+
+    // todo temporary
+    height: 50rem;
+
+    &__form {
+        width: 50%;
+        padding: 6rem;
+    }
+}
